<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/compStudentsApplication"
                android:title="@string/application"/>
            <item
                android:id="@+id/compJob"
                android:title="@string/job"/>
            <item
                android:id="@+id/compEditProf"
                android:title="@string/edit_profile"/>
        </menu>
    </item>
    <item android:title="@string/comunication">
        <menu>
            <item
                android:id="@+id/compContactUs"
                android:title="@string/contact_us"/>
            <item
                android:id="@+id/compAboutUs"
                android:title="@string/about_us"/>
        </menu>
    </item>
</menu>